@@ -23,7 +23,14 @@ DM
 def setup_orm
   dm = DM
   db = @app_name.underscore
-  require_dependencies 'data_mapper'
+  %w(
+    dm-core
+    dm-aggregates
+    dm-constraints
+    dm-migrations
+    dm-timestamps
+    dm-validations
+  ).each { |dep| require_dependencies dep }
   require_dependencies case options[:adapter]
     when 'mysql'
       dm.gsub!(/!DB_DEVELOPMENT!/,"\"mysql://root@localhost/#{db}_development\"")
